# LightRAG

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Makefile  PHASE4_CICD_AUTOMATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  docker-compose.enhanced.yml  docker-compose.production.yml  env.example  production.env  pyproject.toml  run_tests.py  test_grok_3_mini.py  test_lightrag_direct.py  test_lightrag_simple.py  tox.ini
.github/workflows/: cd.yml  ci.yml  linting.yaml  performance-tests.yml  release.yml  security-scan.yml
archived_docs_20250817_111837/: CLAUDE.md  PHASE1_TEST_IMPLEMENTATION_SUMMARY.md  PHASE3_PRODUCTION_HARDENING_SUMMARY.md
archived_docs_20250817_111837/docs/: OLLAMA_BATCHING_ORCHESTRATOR.md  POSTGRESQL_SECURITY_FIXES_IMPLEMENTATION.md  POSTGRESQL_SECURITY_REVIEW.md  POSTGRESQL_VS_CHROMADB_COMPARISON.md
archived_docs_20250817_111837/docs/ci-cd/: CI_CD_GUIDE.md  code-quality-report.md
archived_docs_20250817_111837/docs/production/: PRODUCTION_IMPLEMENTATION_GUIDE.md
archived_docs_20250817_111837/docs/security/: SECURITY_HARDENING.md
docs/: CHROMADB_ARCHITECTURE_EVALUATION.md  CRITICAL_ISSUES_REPORT.md  POSTGRESQL_IMAGE_SECURITY_ADVISORY.md  README.md  TEST_COVERAGE_ANALYSIS_REPORT.md  TEST_COVERAGE_REMEDIATION_GUIDE.md  UID_MIGRATION_SUMMARY.md
docs/api/: README.md
docs/architecture/: README.md
docs/ci-cd/: DEPLOYMENT_RUNBOOK.md  TROUBLESHOOTING.md
docs/deployment/: README.md
docs/development/: README.md
docs/production/: PRODUCTION_IMPLEMENTATION_GUIDELINES.md
docs/user-guide/: ollama-integration.md  postgresql-integration.md  xai-integration.md
examples/: docling_service_demo.py  ollama_batching_demo.py  rerank_example.py
lightrag/: __init__.py  base.py  circuit_breaker.py  lightrag.py  operate.py  prompt.py  rerank.py  resilience.py  utils.py  xai_optimizer.py
lightrag-docling/config/: docling_config.py
lightrag-docling/src/: docling_service.py  models.py  processors.py
lightrag/api/: config.py  health.py  lightrag_server.py  utils_api.py
lightrag/api/auth/: __init__.py  handler.py  password_manager.py
lightrag/api/logging/: __init__.py  audit_logger.py
lightrag/api/middleware/: __init__.py  rate_limiter.py  security_headers.py
lightrag/api/migrations/: auth_phase1_migration.py
lightrag/api/routers/: document_processing.py  document_routes.py  document_routes_patch.py  enhanced_pipeline.py  ollama_api.py  query_routes.py
lightrag/api/webui/assets/: architectureDiagram-IEHRJDOE-By1r-_vc.js  cytoscape.esm-CfBqOv7Q.js  feature-graph-ChwGSzXI.js  gitGraphDiagram-7IBYFJ6S-D24Y9tf4.js  radar-MK3ICKWK-CxtTBuu1.js  requirementDiagram-KVF5MWMF-DhduwYYL.js  ui-vendor-CeCm8EER.js
lightrag/config/: __init__.py  batch_config.py
lightrag/docling_client/: __init__.py  client.py  fallback.py  service_discovery.py
lightrag/kg/: faiss_impl.py  json_doc_status_impl.py  json_kv_impl.py  memgraph_impl.py  milvus_impl.py  mongo_impl.py  nano_vector_db_impl.py  neo4j_impl.py  networkx_impl.py  postgres_impl.py  qdrant_impl.py  redis_impl.py  shared_storage.py
lightrag/kg/deprecated/: chroma_impl.py  tidb_impl.py
lightrag/llm/: azure_openai.py  bedrock.py  binding_options.py  jina.py  llama_index_impl.py  lollms.py  ollama.py  openai.py  xai.py  zhipu.py
lightrag/orchestrator/: __init__.py  batch_orchestrator.py  batch_processor.py  embedding_cache.py  error_handler.py  request_queue.py
lightrag/pipeline/: __init__.py  batch_integration.py  enhanced_embedding.py
lightrag_mcp/: config.py  server.py  utils.py
lightrag_mcp/client/: __init__.py  api_client.py  direct_client.py
lightrag_mcp/examples/: test_basic_functionality.py  usage_example.py
lightrag_mcp/tools/: __init__.py  document_tools.py  graph_tools.py  query_tools.py  system_tools.py
lightrag_webui/: tsconfig.json
postgres/config/: postgresql-ssl.conf
postgres/init/: 00-remove-default-users.sh  01-create-custom-db.sh  02-password-security.sh  03-ssl-setup.sh
postgres/ssl/: generate-ssl-certs.sh
rag_storage_test/: kv_store_doc_status.json
scripts/: validate_xai_config.py
scripts/ci/: check-coverage.sh  integration-tests.sh  lint-and-format.sh  security-audit.sh
scripts/deploy/: deploy-docker.sh  deploy-k8s.sh  health-check.sh  rollback.sh
tests/: conftest.py  ollama_test_helpers.py  test_circuit_breaker.py  test_config.py  test_graph_storage.py  test_health.py  test_lightrag_core.py  test_lightrag_ollama_chat.py  test_ollama_batching_orchestrator.py  test_operate.py  test_operate_simple.py  test_phase1_basic.py  test_utils_api.py  test_utils_core.py  test_utils_simple.py
tests/auth/: test_phase1_security.py
tests/core/: test_batching_components.py  test_document_processing.py  test_knowledge_graph.py  test_llm_providers.py  test_mcp_server.py  test_rag_queries.py  test_vector_operations.py
tests/integration/: test_api_endpoints.py  test_batching_integration.py
tests/production/: __init__.py  test_containers.py  test_deployment.py  test_disaster_recovery.py  test_monitoring.py  test_performance.py  test_security_hardening.py
tests/security/: test_security_features.py
tests/storage/: test_storage_backends.py
